--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "uprtcl-tests",
+  "scripts": {
+    "test": "truffle test"
+  },
   "dependencies": {
     "@types/node": "^12.0.8",
-    "crypto-js": "^3.1.9-1"
+    "buffer": "^5.2.1",
+    "cids": "^0.7.1",
+    "multihashing-async": "^0.7.0",
+    "truffle": "^5.0.22"
   }
 }
