--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "buffer": "^5.2.1",
     "cids": "^0.7.1",
     "multihashing-async": "^0.7.0",
-    "truffle": "^5.0.22"
+    "truffle": "^5.0.22",
+    "typedarray-to-buffer": "^3.1.5"
   }
 }
