--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "^12.0.8",
     "buffer": "^5.2.1",
     "cids": "^0.7.1",
+    "dotenv": "^8.0.0",
     "multihashing-async": "^0.7.0",
     "truffle": "^5.0.22",
+    "truffle-privatekey-provider": "^1.3.0",
     "typedarray-to-buffer": "^3.1.5"
   }
 }
