--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "uprtcl-tests",
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test",
+    "migrate": "truffle migrate"
   },
   "dependencies": {
     "@types/node": "^12.0.8",
