--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "uprtcl-tests",
   "scripts": {
     "test": "truffle test",
-    "migrate": "truffle migrate"
+    "migrate": "truffle migrate",
+    "dev": "concurrently \"ganache-cli --networkId 3333 --blockTime 1 --deterministic\" \"npm run migrate\" "
   },
   "dependencies": {
     "@types/node": "^12.0.8",
@@ -13,5 +14,8 @@
     "truffle": "^5.0.22",
     "truffle-privatekey-provider": "^1.3.0",
     "typedarray-to-buffer": "^3.1.5"
+  },
+  "devDependencies": {
+    "concurrently": "^5.0.0"
   }
 }
