--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typedarray-to-buffer": "^3.1.5"
   },
   "devDependencies": {
-    "concurrently": "^5.0.0"
+    "concurrently": "^5.0.0",
+    "ganache-cli": "^6.7.0"
   }
 }
