--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "test": "truffle test",
     "migrate": "truffle migrate",
+    "migrate-rinkeby": "truffle migrate --network rinkeby",
     "dev": "concurrently \"ganache-cli --networkId 3333 --blockTime 1 --deterministic\" \"npm run migrate\" "
   },
   "dependencies": {
@@ -12,6 +13,7 @@
     "dotenv": "^8.0.0",
     "multihashing-async": "^0.7.0",
     "truffle": "^5.0.22",
+    "truffle-hdwallet-provider": "^1.0.17",
     "truffle-privatekey-provider": "^1.3.0",
     "typedarray-to-buffer": "^3.1.5"
   },
