--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cids": "^0.7.1",
     "dotenv": "^8.0.0",
     "multihashing-async": "^0.7.0",
+    "seedrandom": "^3.0.5",
     "truffle": "^5.0.22",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-privatekey-provider": "^1.3.0",
