--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 /node_modules
 .env
+build/contracts/Context.json
+build/contracts/ERC20.json
+build/contracts/ERC20Mintable.json
+build/contracts/HasSuperUsers.json
+build/contracts/IERC20.json
+build/contracts/Migrations.json
+build/contracts/Ownable.json
+build/contracts/SafeMath.json
+build/contracts/UPNService.json
+build/contracts/UPRRegistry.json
+build/contracts/UprtclAccounts.json
+build/contracts/UprtclDetails.json
+build/contracts/UprtclHomePerspectives.json
+build/contracts/UprtclProposals.json
+build/contracts/UprtclRoot.json
+build/contracts/UprtclWrapper.json
