--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "test": "truffle test",
     "migrate": "truffle migrate",
     "migrate-rinkeby": "truffle migrate --network rinkeby",
-    "dev": "concurrently \"ganache-cli --networkId 3333 --blockTime 5 --deterministic\" \"npm run migrate\" "
+    "dev": "concurrently \"ganache-cli --networkId 3333 --blockTime 5 --deterministic\" \"npm run migrate\" ",
+    "minify": "node ./json.clean.js ./build/contracts"
   },
   "dependencies": {
     "@types/node": "^12.0.8",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
-    "ganache-cli": "^6.7.0"
+    "ganache-cli": "^6.7.0",
+    "glob": "^7.1.6"
   }
 }
