--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multihashing-async": "^0.7.0",
     "seedrandom": "^3.0.5",
     "truffle": "^5.0.22",
+    "truffle-flattener": "^1.5.0",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-privatekey-provider": "^1.3.0",
     "typedarray-to-buffer": "^3.1.5"
